Closed
Bug 469752
Opened 17 years ago
Closed 17 years ago
"ASSERTION: Whoever was caching this font group should have called UpdateFontList on it" with @font-face, src:local()
Categories
(Core :: Graphics, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: jruderman, Assigned: karlt)
References
Details
(Keywords: assertion, testcase, verified1.9.1)
Attachments
(2 files)
|
190 bytes,
text/html
|
Details | |
|
1.09 KB,
patch
|
jtd
:
review+
beltzner
:
approval1.9.1+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: Whoever was caching this font group should have called UpdateFontList on it: '!mUserFontSet || mCurrGeneration == GetGeneration()', file ../../../dist/include/thebes/gfxAtsuiFonts.h, line 142
| Assignee | ||
Comment 1•17 years ago
|
||
I'm thinking that gfxUserFontSet::mGeneration does not need to be incremented after LookupLocalFont. AFAICT there's nothing asynchronous here (ignoring bug 465463, that is), so there's no generation used before the LookupLocalFont.
| Assignee | ||
Comment 2•17 years ago
|
||
Attachment #354086 -
Flags: review?(jdaggett)
Comment 3•17 years ago
|
||
Comment on attachment 354086 [details] [diff] [review]
don't increment generation after LookupLocalFont
Because local fonts are created when looked up, their creation doesn't affect the lookup behavior of a font group, so there's no need to bump the generation number.
Attachment #354086 -
Flags: review?(jdaggett) → review+
| Assignee | ||
Comment 4•17 years ago
|
||
Fixed on m-c:
http://hg.mozilla.org/mozilla-central/rev/a828ae6e92f4
| Assignee | ||
Updated•17 years ago
|
Attachment #354086 -
Flags: approval1.9.1?
| Assignee | ||
Updated•17 years ago
|
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Comment 5•17 years ago
|
||
Comment on attachment 354086 [details] [diff] [review]
don't increment generation after LookupLocalFont
a191=beltzner
Attachment #354086 -
Flags: approval1.9.1? → approval1.9.1+
| Assignee | ||
Comment 6•17 years ago
|
||
Fixed on 1.9.1:
http://hg.mozilla.org/releases/mozilla-1.9.1/rev/7dbcda0d0fb8
Keywords: fixed1.9.1
Comment 7•16 years ago
|
||
verified FIXED on debug builds:
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1pre) Gecko/20090608 Shiretoko/3.5pre ID:20090608122057
and
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090608 Minefield/3.6a1pre ID:20090608122028
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.1 → verified1.9.1
You need to log in
before you can comment on or make changes to this bug.
Description
•