b=469752 don't increment generation after LookupLocalFont in gfxUserFontSet::LoadNext r=jdaggett